Fix the footer color in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -7,6 +7,9 @@ a.navbar-brand {
 .page-footer {
   background-color: #2c3e50;
 }
+.dark .page-footer {
+  background-color: #282a36;
+}
 .page-footer .site-footer {
   color: #fff;
 }
